# Conversation

./: .clang-format  .clang-tidy  .gitignore  .luarc.json  CMakeLists.txt  Doxyfile.in  README.md  gem.json
Assets/: default_style.json  graphcanvas_style.json
Assets/ConversationCanvas/GraphData/: ConditionOutput.conversationgraphnodetemplate
Assets/ConversationCanvas/StyleSheet/: conversationcanvas_style.json
Assets/Input/: default_conversation.inputbindings
Assets/Prefabs/: PlayerConversationInputListener.prefab
Assets/ScriptCanvas/: AutoResponder.scriptcanvas  ConversationComponent.scriptcanvas
Assets/ScriptCanvas/Input/: ConversationInput.scriptcanvas  ConversationInputHandler.scriptcanvas  NpcDialogueListener.scriptcanvas  PlayerDialogueInput.scriptcanvas
Assets/ScriptCanvas/Player/: PlayerRequestBusHandler.scriptcanvas
Assets/ScriptCanvas/UI/: Conversation.scriptcanvas  HUD.scriptcanvas  OnNpcDialogue.scriptcanvas  OnPlayerDialogue.scriptcanvas
Assets/ScriptEvents/: ConversationComponentNotifications.scriptevents  ConversationComponentRequests.scriptevents  ConversationSpeakerNotifications.scriptevents  ConversationUiRequests.scriptevents  GameActorRequestBus.scriptevents  GlobalConversationComponentNotifications.scriptevents  PlayerRequestBus.scriptevents
Assets/UI/: Conversation.uicanvas
Code/: CMakeLists.txt  conversation_api_files.cmake  conversation_autogen_files.cmake  conversation_autogen_files.cmake.bak  conversation_editor_files.cmake  conversation_editor_private_files.cmake  conversation_editor_shared_files.cmake  conversation_editor_tests_files.cmake  conversation_files.cmake  conversation_private_files.cmake  conversation_shared_files.cmake  conversation_tests_files.cmake  conversationcanvas_files.cmake  conversationcanvas_win_files.cmake
Code/Include/Conversation/: AvailabilityBus.h  CinematicBus.h  Constants.h  ConversationAsset.h  (+12 more)
Code/Source/: AddDialogueNodeable.ScriptCanvasNodeable.xml  AddDialogueNodeable.cpp  AddDialogueNodeable.h  AvailabilityBus.cpp  Conversation.qrc  ConversationAsset.cpp  ConversationCanvas.qrc  ConversationEditorModule.cpp  ConversationEditorSystemComponent.cpp  ConversationEditorSystemComponent.h  ConversationModule.cpp  ConversationModuleInterface.h  ConversationSystemComponent.cpp  ConversationSystemComponent.h  ConversationWidget.cpp  ConversationWidget.h  DialogueAudioControl.cpp  DialogueComponent.cpp  DialogueComponent.h  DialogueComponentBus.cpp  DialogueData.cpp  DialogueData_incl.cpp  DialogueLibrary.cpp  DialogueLibrary.h  DialogueNodes.cpp  DialogueNodes.h  Logging.h  toolbar_icon.svg.source
Code/Tests/: ConversationEditorTest.cpp  ConversationEditorTestEnvironment.cpp  ConversationEditorTestEnvironment.h  ConversationTest.cpp  ConversationTest.h  ConversationTestEnvironment.cpp  ConversationTestEnvironment.h  DialogueComponentTestBase.h
Registry/: assetprocessor_settings.setreg
Scripts/conversation/: component.lua  condition.lua  core.lua  dialogue.lua  dialogue_component.lua  example_dlg_script.lua
Tools/: CMakeLists.txt
Tools/ConversationCanvas/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in  api.rst  conf.py  docs_files.cmake  gettingstarted.rst  index.rst  installation.rst
(+181 files in other folders)
